Add appendix on extensions

--- a/spec/03Terms.tex
+++ b/spec/03Terms.tex
@@ -72,7 +72,7 @@
 
 {\bf \thedefctr~протокол защиты транспортного уровня; протокол TLS 
 (transport layer security protocol)}: 
-Определеяемый в настоящем стандарте криптографический протокол, который 
+Определяемый в настоящем стандарте криптографический протокол, который 
 обеспечивает взаимную аутентификацию сторон протокола, конфиденциальность 
 и контроль целостности данных, передаваемых между сторонами на 
 транспортном коммуникационном уровне. 
