--- a/spec/07Record.tex
+++ b/spec/07Record.tex
@@ -324,17 +324,17 @@ $2^{14} + 1024$;
 восстановление не могло привести к переполнению внутренних буферов памяти. 
 
 \begin{note}
-Примечание 1~--- Некоторые алгоритмы сжатия для TLS приводятся в~\cite{RFC3749}. 
+Некоторые алгоритмы сжатия для TLS приводятся в~\cite{RFC3749}. 
 \end{note}
 
 \begin{note}
-Примечание 2~--- Известны атаки на прикладные протоколы, в которых 
-злоумышленник знает формат фрагмента открытых данных и даже частично 
-управляет его содержимым. Злоумышленник использует уровень сжатия (разницу 
-между \lstinline{TLSPlaintext.length} и \lstinline{TLSCompressed.length}) 
-для определения недостающих частей фрагмента. Следует учитывать 
-возможность таких атак при проектировании пакетов прикладных протоколов и 
-планировании сжатия в TLS. 
+Известны атаки на прикладные протоколы, в которых злоумышленник знает формат
+фрагмента открытых данных и даже частично управляет его содержимым.
+Злоумышленник использует уровень сжатия (разницу между
+\lstinline{TLSPlaintext.length} и \lstinline{TLSCompressed.length}) для
+определения недостающих частей фрагмента. Следует учитывать возможность таких
+атак при проектировании пакетов прикладных протоколов и планировании сжатия в
+TLS.
 \end{note}
  
 \subsection{Защита данных}\label{RECORD.3.3}
@@ -344,6 +344,7 @@ $2^{14} + 1024$;
 Алгоритм расшифрования выполняет обратный процесс. 
 
 Тип \lstinline{TLSCiphertext} определяется следующим образом:
+
 \begin{lstlisting}
 struct {
   ContentType type;
@@ -375,7 +376,7 @@ $2^{14} + 2048$;
 \lstinline{TLSCompressed.fragment} вместе с имитовставкой. 
 \end{enumerate}
                 
-\subsubsection {Поточное шифрование}\label{RECORD.3.3.1}
+\subsubsection{Поточное шифрование}\label{RECORD.3.3.1}
 
 Алгоритмы поточного шифрования преобразуют структуру 
 \lstinline{TLSCompressed.fragment} в структуру 
@@ -475,8 +476,8 @@ struct {
 \lstinline{TLSCompressed.length}, 
 \lstinline{SecurityParameters.mac_length} и \lstinline{padding_length}.  
 
-\begin{example}
-Пример~--- Пусть длина блока (в байтах) алгоритма шифрования равна 8, 
+\begin{example*}
+Пусть длина блока (в байтах) алгоритма шифрования равна 8, 
 длина содержимого (\lstinline{TLSCompressed.length}) равна 61, 
 а длина имитовставки~--- 20. 
 Тогда суммарная длина полей \lstinline{content}, \lstinline{MAC}, 
@@ -488,26 +489,24 @@ struct {
 образом, последние 8 байтов структуры \lstinline{GenericBlockCipher} до их 
 зашифрования будут иметь следующий вид: XX 06 06 06 06 06 06 06, где XX~--- 
 последний байт имитовставки (поле MAC).
-\end{example}
+\end{example*}
 
 \begin{note}
-Примечание 1~--- При шифровании в режиме сцепления блоков весь фрагмент 
-открытого текста ДОЛЖЕН быть известен до передачи какой-либо части 
-соответствующего шифртекста.
+При шифровании в режиме сцепления блоков весь фрагмент открытого текста ДОЛЖЕН
+быть известен до передачи какой-либо части соответствующего шифртекста.
 \end{note}
 
 \begin{note}
-Примечание 2~--- В \cite{PwdInterception} описана атака на механизм 
-дополнения данных перед зашифрованием, основанная на замерах времени 
-вычисления имитовставки расшифрованных данных. Для защиты от данной атаки 
-реализации ДОЛЖНЫ обрабатывать зашифрованные фрагменты данных за одно и то 
-же время, вне зависимости от того, какое дополнение получено при 
-расшифровании, корректное или нет. Для этого рекомендуется вычислять 
-имитовставку даже в том случае, когда дополнение некорректно, и только 
-после этого браковать фрагмент. Для защиты от атаки, предложенной в~\cite{Lucky13}, 
-рекомендуется и при корректном, и при некрректном дополнении вычислять 
-имитовставку за максимальное время. Это время, за которые были бы 
-выполнены вычисления, если бы дополнение имело нулевую длину. 
+В \cite{PwdInterception} описана атака на механизм дополнения данных перед
+зашифрованием, основанная на замерах времени вычисления имитовставки
+расшифрованных данных. Для защиты от данной атаки реализации ДОЛЖНЫ обрабатывать
+зашифрованные фрагменты данных за одно и то же время, вне зависимости от того,
+какое дополнение получено при расшифровании, корректное или нет. Для этого
+рекомендуется вычислять имитовставку даже в том случае, когда дополнение
+некорректно, и только после этого браковать фрагмент. Для защиты от атаки,
+предложенной в~\cite{Lucky13}, рекомендуется и при корректном, и при некрректном
+дополнении вычислять имитовставку за максимальное время. Это время, за которые
+были бы выполнены вычисления, если бы дополнение имело нулевую длину.
 \end{note}
 
 \subsubsection{Одновременное шифрование и имитозащита}\label{RECORD.3.3.3}
