--- a/spec/08Handshake.tex
+++ b/spec/08Handshake.tex
@@ -451,7 +451,7 @@ Handshake завершается сообщениями \lstinline{Finished}, и
 
 Сообщения \lstinline{ClientHello} могут содержать расширения. Для проверки наличия 
 расширений следует проверить, что сообщение не заканчивается полем 
-\lstinline{compression_methods} и что за этим полем имеются дполнительные байты. 
+\lstinline{compression_methods} и что за этим полем имеются дополнительные байты. 
 Такой метод выявления необязательных данных отличается от обычного в TLS 
 способа обработки полей переменной длины. Метод выбран для совместимости с 
 более ранними версиями TLS, в которых расширения не были предусмотрены. 
@@ -577,10 +577,10 @@ enum {
 } ExtensionType;
 \end{lstlisting}
 
-\begin{note}
-Примечание~---~Некоторые распространенные дополнительные расширения определены 
+\begin{note*}
+Некоторые распространенные дополнительные расширения определены 
 в~\cite{RFC6066}.
-\end{note} 
+\end{note*} 
 
 В сообщение \lstinline{ServerHello} НЕЛЬЗЯ включать расширения с типом,
 который не встречается в соответствующем сообщении \lstinline{ClientHello}.
@@ -733,11 +733,10 @@ struct {
 флаг~\lstinline{secure_renegotiation} в~0. Более того, клиент может 
 разорвать связь, если безопасная переустановка является для него критичной.
 
-\begin{note}
-Примечание~---~Здесь и далее в параграфе разрыв связи означает отправку 
-сигнального сообщения \lstinline{handshake_failure} с последующим закрытием 
-соединения.
-\end{note} 
+\begin{note*}
+Здесь и далее в параграфе разрыв связи означает отправку сигнального сообщения
+\lstinline{handshake_failure} с последующим закрытием соединения.
+\end{note*} 
 
 Если расширение присутствует, то клиент устанавливает флаг 
 \lstinline{secure_renegotiation} в~1. Клиент ДОЛЖЕН проверить, что длина поля 
@@ -843,11 +842,11 @@ opaque ASN.1Cert<1..2^24-1>;
 алгоритмом формирования общего ключа. 
 \end{itemize}
 
-\begin{note}
-Примечание~--- Для управления выбором сертификатов, могут использоваться 
+\begin{note*}
+Для управления выбором сертификатов, могут использоваться 
 расширения \lstinline{server_name} и \lstinline{trusted_ca_keys}, 
 определенные в~\cite{RFC6066}.
-\end{note} 
+\end{note*} 
 
 Если клиент выслал расширение \lstinline{signature_algorithms} в своем сообщении 
 \lstinline{ClientHello}, то все сертификаты, предоставленные сервером, ДОЛЖНЫ быть 
@@ -966,11 +965,11 @@ opaque DistinguishedName<1..2^16-1>;
 ограничивает алгоритм, используемый для подписи сертификата. 
 \end{itemize}
 
-\begin{note}
-Примечание~---~Если сервер, который не предъявил свой сертификат, 
-запрашивает сертификат клиента, то это считается ошибкой типа  
-\lstinline{handshake_failure} (см.~\ref{ALERT.3}).
-\end{note}  
+\begin{note*}
+Если сервер, который не предъявил свой сертификат, запрашивает сертификат
+клиента, то это считается ошибкой типа  \lstinline{handshake_failure}
+(см.~\ref{ALERT.3}).
+\end{note*}  
 
 \section{Сообщение \lstinline{ServerHelloDone}}\label{HANDSHAKE.11}
 
