--- a/spec/92Syntax.tex
+++ b/spec/92Syntax.tex
@@ -144,10 +144,10 @@ enum {e1(v1), e2(v2) [[,...]] [[, (n)]]} Te;
 Te += {e3(v3), e4(v4)};
 \end{lstlisting}
 
-\begin{note}
-Примечание~--- Возможность доопределения перечислительного типа является 
+\begin{note*}
+Возможность доопределения перечислительного типа является 
 единственным расширением правил описания данных, заданных в \cite{RFC5246}. 
-\end{note}
+\end{note*}
 
 Для перечислений, которые никогда не преобразовываются во внешние 
 представления, числовые значения могут опускаться. Например, 
@@ -297,7 +297,7 @@ opaque vector <0..2^16-1>;
 Фактическая длина вектора определяется используемым алгоритмом шифрования 
 и его ключами. 
 
-Рассмотрим пример использования крипографических атрибутов:
+Рассмотрим пример использования криптографических атрибутов:
 \begin{lstlisting}
 stream-ciphered struct {
   uint8 field1;
