--- a/spec/99Biblio.tex
+++ b/spec/99Biblio.tex
@@ -1,4 +1,5 @@
 \begin{thebibliography}{999}
+
 \bibitem{ISO9899}
 ISO/IEC 9899:2011 
 Information technology~--– Programming languages + C\\
@@ -51,7 +52,7 @@ Royal Holloway, University of London.
 
 \bibitem{RFC6066}
 RFC 6066:2011 
-Transport Layer Security (TLS) Extensions: Extension Definitions \\
+Transport Layer Security (TLS) Extensions: Extension Definitions\\
 {\small (Расширения TLS: определения расширений)}
 
 \bibitem{X501}
@@ -60,6 +61,26 @@ Information Technology~--- Open Systems Interconnection~---
 The Directory: Models, 1993\\ 
 {\small (Информационные технологии~--– Взаимосвязь открытых систем~---
 Директория: Модели)}
+
+\bibitem{RFC6961}
+RFC 6961:2013
+The Transport Layer Security (TLS) Multiple Certificate Status 
+Request Extension\\
+{\small (Расширение TLS для нескольких запросов о статусе сертификатов)}
+
+\bibitem{RFC7627}
+RFC 7627:2015
+Transport Layer Security (TLS) Session Hash and Extended Master Secret 
+Extension\\
+{\small (Расширение TLS для хэширования сеансовых данных и построения 
+расширенного мастер-ключа)}
+
+\bibitem{RFC7366}
+RFC 7366:2014
+Encrypt-then-MAC for Transport Layer Security (TLS) and Datagram Transport 
+Layer Security (DTLS)\\
+{\small (Расширение TLS и DTLS для переключения на схему 
+Зашифрование-затем-имитозащита)} 
 
 \label{LastBib}
 \end{thebibliography}
