--- a/spec/99Errata.tex
+++ b/spec/99Errata.tex
@@ -124,3 +124,50 @@
 \hline
 \end{tabular}
 \end{center}
+
+\vfill
+
+\mbox{}
+
+\begin{center}
+\begin{tabular}{|p{3.5cm}|p{6cm}|p{6cm}|}
+\hline
+В каком месте & Напечатано & Должно быть\\
+\hline
+%
+\hline
+Приложение~\ref{EXTS} &
+Отсутствует &
+Добавлено
+\\
+%
+\hline
+Библиография, ссылка~\cite{RFC6961} &
+&
+The Transport Layer Security (TLS) Multiple Certificate Status 
+Request Extension\par
+{\small (Расширение TLS для нескольких запросов о статусе сертификатов)}
+\\
+%
+\hline
+Библиография, ссылка~\cite{RFC7627} &
+&
+RFC 7627:2015
+Transport Layer Security (TLS) Session Hash and Extended Master Secret 
+Extension\par
+{\small (Расширение TLS для хэширования сеансовых данных и построения 
+расширенного мастер-ключа)}
+\\
+%
+\hline
+Библиография, ссылка~\cite{RFC7366} &
+&
+RFC 7366:2014
+Encrypt-then-MAC for Transport Layer Security (TLS) and Datagram Transport 
+Layer Security (DTLS)\par
+{\small (Расширение TLS и DTLS для переключения на схему 
+Зашифрование-затем-имитозащита)}
+\\
+\hline
+\end{tabular}
+\end{center}
