--- a/spec/02Refs.tex
+++ b/spec/02Refs.tex
@@ -29,16 +29,14 @@
 ГОСТ~27463-87 Системы обработки информации. 7-битные кодированные наборы 
 символов 
 
-\begin{note}
-Примечание~---~При пользовании настоящим стандартом целесообразно 
-проверить действие ТНПА по каталогу, составленному по состоянию на 1 
-января текущего года, и по соответствующим информационным указателям, 
-опубликованным в текущем году. 
+\begin{note*}
+При пользовании настоящим стандартом целесообразно проверить действие ТНПА по
+каталогу, составленному по состоянию на 1 января текущего года, и по
+соответствующим информационным указателям, опубликованным в текущем году.
 
-Если ссылочные ТНПА заменены (изменены), то 
-при пользовании настоящим стандартом следует руководствоваться замененными 
-(измененными) ТНПА. Если ссылочные ТНПА отменены без замены, то положение, 
-в котором дана ссылка на них, применяется в части, не затрагивающей эту 
-ссылку. 
-\end{note}
+Если ссылочные ТНПА заменены (изменены), то при пользовании настоящим стандартом
+следует руководствоваться замененными (измененными) ТНПА. Если ссылочные ТНПА
+отменены без замены, то положение, в котором дана ссылка на них, применяется в
+части, не затрагивающей эту ссылку.
+\end{note*}
 
