--- a/spec/_defs.sty
+++ b/spec/_defs.sty
@@ -1,18 +1,19 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{_defs}
 
-%%%%%%%%%%%  Format %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%% Format %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\doubt}[1]{{\textcolor{red}{#1}}}
 \newcommand{\addendum}[1]{\textcolor{blue}{#1}}
-\newcommand{\old}[1]{}
+
+\newcommand\algname[1]{\texttt{#1}\xspace}
 
 \newcounter{defctr}
 \setcounter{defctr}{0}
 \renewcommand{\thedefctr}
-{\addtocounter{defctr}{1}\thechapter.\arabic{defctr}}
+{\addtocounter{defctr}{1}\thesection.\arabic{defctr}}
 
-%%%%%%%%%%%%%%%%%%%%%%%% Renew %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%% Renew %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \renewcommand{\le}{\leqslant}
 \renewcommand{\leq}{\leqslant}
@@ -20,7 +21,64 @@
 \renewcommand{\geq}{\geqslant}
 \providecommand{\No}{\textnumero}
 
-%%%%%%%%%%%%%%%%%%%%%%%% Appendix %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%% Environments %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\newcounter{note}[subsubsection]
+
+\newenvironment{note*}{
+  \def\thenotename{Примечание~---~}
+  \list{}{\vskip3pt
+    \labelwidth=0pt\topsep=0pt\partopsep=0pt\parskip=0pt\parsep=0pt
+    \itemsep=0pt\itemindent=0pt\leftmargin=\parindent
+    \labelsep=0pt\small\item[\thenotename]}
+}{\vskip3pt\endlist}
+
+\newenvironment{note}{
+  \def\thenotename{Примечание~\@arabic\c@note~---~}
+  \list{}{\vskip3pt
+   \labelwidth=0pt\topsep=0pt\partopsep=0pt\parskip=0pt\parsep=0pt
+   \itemsep=0pt\itemindent=0pt\leftmargin=\parindent
+    \refstepcounter{note}
+    \labelsep=0pt\small\item[\thenotename]}
+}{\vskip3pt\endlist}
+
+\newenvironment{notes}{
+  \def\thenotename{Примечания}
+  \list{}{\vskip3pt
+    \labelwidth=0pt\topsep=0pt\partopsep=0pt\parskip=0pt\parsep=0pt
+    \itemsep=0pt\itemindent=0pt\leftmargin=\parindent
+    \labelsep=0pt\small\item[\thenotename]}\mbox{}\par
+}{\vskip3pt\endlist}
+
+\newcounter{example}[subsubsection]
+
+\newenvironment{example*}{
+ \def\theexamplename{Пример~---~}
+  \list{}{\vskip3pt
+    \labelwidth=0pt\topsep=0pt\partopsep=0pt\parskip=0pt\parsep=0pt
+    \itemsep=0pt\itemindent=0pt\leftmargin=\parindent
+    \labelsep=0pt\small\bf\itshape\item[\theexamplename]}
+}{\vskip3pt\endlist}
+
+\newenvironment{example}{
+  \def\theexamplename{Пример~\@arabic\c@example~---~}
+  \list{}{\vskip3pt
+    \labelwidth=0pt\topsep=0pt\partopsep=0pt\parskip=0pt\parsep=0pt
+    \itemsep=0pt\itemindent=0pt\leftmargin=\parindent
+    \refstepcounter{example}
+    \labelsep=0pt\small\bf\itshape\item[\theexamplename]}
+}{\vskip3pt\endlist}
+
+\newenvironment{examples}{
+  \def\theexamplename{Примеры}
+  \list{}{\vskip3pt
+    \labelwidth=0pt\topsep=0pt\partopsep=0pt\parskip=0pt\parsep=0pt
+    \itemsep=0pt\itemindent=0pt\leftmargin=\parindent
+    \refstepcounter{example}
+    \labelsep=0pt\small\bf\itshape\item[\theexamplename]}\mbox{}\par
+}{\vskip3pt\endlist}
+
+%%%%%%%%%%%%%%%%%%%%%%%% Appendix %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \def\apprefix{}
 \newenvironment{appendix}[3]
@@ -44,7 +102,7 @@
   \def\thechapter{\@arabic\c@chapter}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%% Local %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%% Locale %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \addto\captionsrussian{%
   \renewcommand{\figurename}{Рисунок}
@@ -53,7 +111,8 @@
   \renewcommand{\bibname}{Библиография}
 }
 
-%%%%%%%%%%%%%%%%%%%%%%%% Listings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%% Listings %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \lstset{
   language=C++,                   % choose the language of the code
@@ -88,7 +147,4 @@ morekeywords={
   len,
 }}
 
-
-%%
-%%
 \endinput
