--- a/spec/99Biblio.tex
+++ b/spec/99Biblio.tex
@@ -79,8 +79,7 @@ Extension\\
 RFC 7366:2014
 Encrypt-then-MAC for Transport Layer Security (TLS) and Datagram Transport 
 Layer Security (DTLS)\\
-{\small (Расширение TLS и DTLS для переключения на схему 
-Зашифрование-затем-имитозащита)} 
+{\small (Зашифрование-затем-имитозащита для TLS и DTLS)}
 
 \label{LastBib}
 \end{thebibliography}
