--- a/spec/99Errata.tex
+++ b/spec/99Errata.tex
@@ -144,6 +144,7 @@
 \hline
 Библиография, ссылка~\cite{RFC6961} &
 &
+RFC 6961:2013
 The Transport Layer Security (TLS) Multiple Certificate Status 
 Request Extension\par
 {\small (Расширение TLS для нескольких запросов о статусе сертификатов)}
@@ -165,8 +166,7 @@ Extension\par
 RFC 7366:2014
 Encrypt-then-MAC for Transport Layer Security (TLS) and Datagram Transport 
 Layer Security (DTLS)\par
-{\small (Расширение TLS и DTLS для переключения на схему 
-Зашифрование-затем-имитозащита)}
+{\small (Зашифрование-затем-имитозащита для TLS и DTLS)}
 \\
 \hline
 \end{tabular}
