--- a/spec/93BSuites.tex
+++ b/spec/93BSuites.tex
@@ -110,7 +110,7 @@ Handshake. Длина ключа
 
 Имитовставка добавляется к открытым данным перед их зашифрованием
 (см.~\ref{RECORD.3.3.1},~\ref{RECORD.3.3.2}). Длина имитовставки
-(\lstinline{SecurityParameters.mac_lenght}) равняется 8.
+(\lstinline{SecurityParameters.mac_length}) равняется 8.
 
 \subsubsection{Одновременное шифрование и имитозащита}\label{BSUITES.2.1.3}
 
