--- a/spec/99Errata.tex
+++ b/spec/99Errata.tex
@@ -48,6 +48,15 @@
 (см.~\ref{BSUITES.2.3}).
 \\
 \hline
+Приложение~\ref{BSUITES},\par
+пункт~\ref{BSUITES.2.1.2},\par
+последний абзац
+&
+\lstinline{SecurityParameters.mac_lenght}
+&
+\lstinline{SecurityParameters.mac_length}
+\\
+\hline
 \multirow{3}{*}{\shortstack[l]{
 Приложение~\ref{BSUITES},\\
 пункт~\ref{BSUITES.2},\\[3pt]
