--- a/spec/07Record.tex
+++ b/spec/07Record.tex
@@ -324,11 +324,11 @@ $2^{14} + 1024$;
 восстановление не могло привести к переполнению внутренних буферов памяти. 
 
 \begin{note}
-Примечание 1~--- Некоторые алгоритмы сжатия для TLS приводятся в~\cite{RFC3749}. 
+Некоторые алгоритмы сжатия для TLS приводятся в~\cite{RFC3749}. 
 \end{note}
 
 \begin{note}
-Примечание 2~--- Известны атаки на прикладные протоколы, в которых 
+Известны атаки на прикладные протоколы, в которых 
 злоумышленник знает формат фрагмента открытых данных и даже частично 
 управляет его содержимым. Злоумышленник использует уровень сжатия (разницу 
 между \lstinline{TLSPlaintext.length} и \lstinline{TLSCompressed.length}) 
@@ -491,13 +491,13 @@ struct {
 \end{example}
 
 \begin{note}
-Примечание 1~--- При шифровании в режиме сцепления блоков весь фрагмент 
+При шифровании в режиме сцепления блоков весь фрагмент 
 открытого текста ДОЛЖЕН быть известен до передачи какой-либо части 
 соответствующего шифртекста.
 \end{note}
 
 \begin{note}
-Примечание 2~--- В \cite{PwdInterception} описана атака на механизм 
+В \cite{PwdInterception} описана атака на механизм 
 дополнения данных перед зашифрованием, основанная на замерах времени 
 вычисления имитовставки расшифрованных данных. Для защиты от данной атаки 
 реализации ДОЛЖНЫ обрабатывать зашифрованные фрагменты данных за одно и то 
