--- a/spec/93BSuites.tex
+++ b/spec/93BSuites.tex
@@ -431,11 +431,11 @@ ClientCertificateType += {bign128_auth(231),
 в сообщении~\lstinline{Certificate}.  
 
 В СТБ~34.101.45 (пункт~5.2) для алгоритмов ЭЦП определены три уровня 
-стойкости: $l = 128$, $l = 192$ и $l = 256$. При использовании методов 
+стойкости: $\ell = 128$, $\ell = 192$ и $\ell = 256$. При использовании методов 
 \lstinline{bign128_auth}, \lstinline{bign192_auth} и 
 \lstinline{bign256_auth} сертификат ДОЛЖЕН содержать открытый ключ, 
-который можно использовать на уровнях стойкости $l \geq 128$,  
-$l\geq 192$ и $l = 256$ соответственно.  
+который можно использовать на уровнях стойкости $\ell\geq 128$,  
+$\ell\geq 192$ и $\ell = 256$ соответственно.  
 
 Формат сертификата ДОЛЖЕН соответствовать СТБ~34.101.19 с уточнениями, 
 заданными в СТБ~34.101.45 (приложение Д). Сертификат ДОЛЖЕН иметь 
@@ -475,10 +475,10 @@ SignatureAlgorithm += {bign_sign(231)};
 Допустимая пара <<алгоритм хэширования, алгоритмы ЭЦП>> описывается значением 
 \lstinline|{belt_hash, bign_sign}| типа \lstinline{SignatureAndHashAlgorithm}. 
 
-В алгоритмах \lstinline{bign_sign} на уровне стойкости $l$ должна
-использоваться функция хэширования с $2l$-битовыми значениями. Поскольку
+В алгоритмах \lstinline{bign_sign} на уровне стойкости $\ell$ должна
+использоваться функция хэширования с $2\ell$-битовыми значениями. Поскольку
 длина хэш-значения \lstinline{belt_hash} составляет 256 битов, алгоритмы
-\lstinline{bign_sign} могут выполняться только на уровне $l = 128$. Тем не
+\lstinline{bign_sign} могут выполняться только на уровне $\ell = 128$. Тем не
 менее, в будущем список разрешенных функций хэширования может пополняться,
 и при этом могут быть поддержаны остальные уровни стойкости
 \lstinline{bign_sign}. Сказанное означает, что значение
