--- a/spec/07Record.tex
+++ b/spec/07Record.tex
@@ -562,6 +562,8 @@ additional_data = seq_num + TLSCompressed.type +
 При установке защиты длина критических данных НЕ ДОЛЖНА увеличиваться 
 более чем на 1024 байтов. 
 
+% held: https://www.rfc-editor.org/errata/eid2390
+
 Если при обработке данных алгоритм снятия защиты возвратил признак 
 нарушения целостности данных, то ДОЛЖНО быть отправлено критическое 
 сигнальное сообщение \lstinline{bad_record_mac} (см.~\ref{ALERT.3}). 
@@ -612,5 +614,4 @@ key_block = PRF(SecurityParameters.master_secret,
 
 Генерируется столько байтов \lstinline{key_block}, сколько требуется для 
 построения всех ключей и синхропосылок. 
-
 
