--- a/spec13/063Ext.tex
+++ b/spec13/063Ext.tex
@@ -792,8 +792,9 @@ struct {
 запрашивая тем самым перезапуск Handshake с выбором группы со стороны сервера.
 %
 Сервер инициирует перезапуск самостоятельно, если ни одна из групп, указанных в
-списке, его не устраивает. Перезапуск реализуется отправкой сообщения
-\code{HelloRetryRequest} с включением в него расширения~\code{key_share}.
+списке, его не устраивает. Перезапуск реализуется отправкой сообщения 
+\token[HS.HRR]{HelloRetryRequest} с включением в него 
+расширения~\code{key_share}.
 
 Данные расширения \code{key_share} в \token[HS.HRR]{HelloRetryRequest} 
 описываются типом \code{KeyShareHelloRetryRequest}, который определяется 
