--- a/spec13/067Post.tex
+++ b/spec13/067Post.tex
@@ -148,8 +148,8 @@ struct {
 
 \begin{note}
 Если сервер не запрашивает аутентификацию клиента по сертификату, то он может 
-выслать билет в~\token[HS.NST]{NewSessionTicket} сразу после своего 
-сообщения \token[HS.F]{Finished}.
+выслать билет в~\code{NewSessionTicket} сразу после своего сообщения 
+\token[HS.F]{Finished}.
 %
 Для этого сервер самостоятельно вычисляет сообщение 
 \token[HS.F]{Finished} клиента, определяет полную стенограмму Handshake, 
