--- a/spec13/097Auth.tex
+++ b/spec13/097Auth.tex
@@ -27,9 +27,9 @@
 \item
 хэш-значение 
 $\code{Transcript-Hash}(\code{ClientHello},\ldots,\code{Certificate})$, 
-где \code{Certificate}~--- сообщение подписанта, непосредственно предшествующее 
-его же сообщению \token[HS.CV]{CertificateVerify}, в котором будет размещаться 
-подпись.
+где \token[HS.CT]{Certificate}~--- сообщение подписанта, непосредственно 
+предшествующее его же сообщению \token[HS.CV]{CertificateVerify}, в котором 
+будет размещаться подпись.
 \end{enumerate}
 
 \begin{note*}
