Fix bash-prg-ae2561 in btls/bsuites

--- a/spec13/93BSuites.tex
+++ b/spec13/93BSuites.tex
@@ -26,7 +26,7 @@
 определены в СТБ 34.101.31.
 \item
 \code|TLS_BASH_PRG_AE2561_BASH256|~--- алгоритмы аутентифицированного шифрования
-\code{belt-prg-ae2561} в связке с алгоритмом хэширования \code{bash256}.
+\code{bash-prg-ae2561} в связке с алгоритмом хэширования \code{bash256}.
 Алгоритмы определены в СТБ 34.101.77.
 \end{enumerate}
 
@@ -65,7 +65,7 @@
 \code{legacy_record_version} и \code{length} структуры 
 \token[RECORD.Enc]{TLSCiphertext}. Размер ассоциированных данных~--- 5 байтов.
 
-В алгоритмах \code{belt-prg-ae2561} ассоциированные данные~$I\in\{0,1\}^{40}$ 
+В алгоритмах \code{bash-prg-ae2561} ассоциированные данные~$I\in\{0,1\}^{40}$ 
 переносятся в анонc~$A$, объединяясь с синхропосылкой $S\in\{0,1\}^{128}$:
 $$
 A\gets S\parallel I\parallel 0^{24}.
@@ -75,7 +75,7 @@ $$
 
 \begin{note}
 Анонс дополняется нулями, чтобы соответствовать требованиям 
-\code{belt-prg-ae2561}: длина анонса в битах должна быть кратна 32.
+\code{bash-prg-ae2561}: длина анонса в битах должна быть кратна 32.
 \end{note}
 
 В алгоритмах \code{belt-che256} ассоциированные данные и синхропосылка 
